JBIDE-3073 - changing runtime now affects launch config
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@13077 a97e2381-89e5-4abb-bab3-167db6db766c